<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/hm_nav_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:backgroundTint="@color/blue"
            android:elevation="@dimen/_10sdp"
            app:cardPreventCornerOverlap="false"


            app:cardElevation="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/splash_title"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18sdp" />

                <ImageView
                    android:id="@+id/search_button_id"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/search_icon" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/shade_blue"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/card_temp_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:drawableStart="@drawable/temp_icon"
                            android:drawablePadding="@dimen/_5sdp"
                            android:gravity="center|left"
                            android:text="@string/temp_card"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/card_wind_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:drawableStart="@drawable/wind_white_icon"
                            android:drawablePadding="@dimen/_5sdp"
                            android:gravity="center|left"
                            android:text="@string/wind_card"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/card_locality_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/locality_card"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/card_weather_icon_id"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/weather_icon" />

                        <TextView
                            android:id="@+id/card_weather_type_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/weather_type"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:gravity="right|center"
                            android:id="@+id/card_weather_date_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/date_card"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/title_card_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/card1"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/shade_blue"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/today_title_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:text="@string/today_forecast"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/today_date_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:gravity="center|right"
                        android:text="20-08-22"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_card_id">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/tomorrow_card_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/rv_id"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:backgroundTint="@color/shade_blue"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tomorrow_title_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:text="@string/twomorrow_forecast"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tomorrow_date_title_id"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:gravity="center|right"
                            android:text="21-08-22"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp"/>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tomorrow_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tomorrow_card_id"
                    android:layout_marginTop="12dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/trd_card_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tomorrow_rv_id"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:backgroundTint="@color/shade_blue"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/trd_title_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:text="Overmorrow Forecast"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/trd_date_title_id"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:gravity="center|right"
                            android:text="22-08-22"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp"/>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/overm_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trd_card_id" />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>